Fix user reported z-index issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -154,6 +154,7 @@ input[type='radio']:checked + label span.radio-toggle {
 
 #results-overlay {
   position: fixed;
+  z-index: 9;
   top: 0;
   right: 0;
   bottom: 0;
@@ -211,6 +212,7 @@ input[type='radio']:checked + label span.radio-toggle {
 }
 
 #result-box .score-bottom h2 {
-  color: #DA291C;
   font-size: 1.4em;
+
+  color: #da291c;
 }
